# django-celery-demo

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: celery.py  settings.py  urls.py
demo/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
demo/migrations/: 0001_initial.py  0002_auto_20210317_2207.py  0003_countprimenumbers_status.py
demo/tests/: tests.http
profile.d/: aliasses.sh  poetry.sh
